[gd_scene load_steps=16 format=3 uid="uid://d1aqn6od0spvt"]

[ext_resource type="Texture2D" uid="uid://cjhriqvy8ioi8" path="res://Textures/Player/player_sprite.png" id="1_0418p"]
[ext_resource type="Script" path="res://Scenes/player.gd" id="1_fiixu"]
[ext_resource type="PackedScene" uid="uid://dtcakqpko2qv7" path="res://Utilities/hurt_box.tscn" id="3_lif8k"]
[ext_resource type="Texture2D" uid="uid://cpjlhcaqekam7" path="res://Textures/GUI/exp_background.png" id="4_aumye"]
[ext_resource type="Texture2D" uid="uid://gkfcb4tva2b2" path="res://Textures/GUI/exp_progress.png" id="5_wggi8"]
[ext_resource type="FontFile" uid="uid://b8rl18i6alwfd" path="res://Font/tenderness.otf" id="6_npapk"]
[ext_resource type="AudioStream" uid="uid://cqlkyi2circ2k" path="res://Audio/SoundEffect/levelup.ogg" id="7_tm4c7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jwfne"]
radius = 7.0
height = 24.0

[sub_resource type="Animation" id="Animation_co5rn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4gswi"]
resource_name = "walk"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oekyp"]
_data = {
"RESET": SubResource("Animation_co5rn"),
"walk": SubResource("Animation_4gswi")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k768m"]
size = Vector2(13, 23)

[sub_resource type="CircleShape2D" id="CircleShape2D_j0wmj"]
radius = 404.005

[sub_resource type="CircleShape2D" id="CircleShape2D_brq7u"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pyt83"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_fiixu")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_0418p")
hframes = 2

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 4)
shape = SubResource("CapsuleShape2D_jwfne")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oekyp")
}

[node name="HurtBox" parent="." instance=ExtResource("3_lif8k")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(3.5, 3.5)
shape = SubResource("RectangleShape2D_k768m")

[node name="Attack" type="Node2D" parent="."]

[node name="JavelinBase" type="Node2D" parent="Attack"]
unique_name_in_owner = true

[node name="IceSpearTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="IceSpearAttackTimer" type="Timer" parent="Attack/IceSpearTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="TornadoTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 3.0

[node name="TornadoAttackTimer" type="Timer" parent="Attack/TornadoTimer"]
unique_name_in_owner = true
wait_time = 0.2

[node name="EnemyDetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_j0wmj")

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource("CircleShape2D_brq7u")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_pyt83")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="ExperienceBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture_under = ExtResource("4_aumye")
texture_progress = ExtResource("5_wggi8")

[node name="lab_level" type="Label" parent="GUILayer/GUI/ExperienceBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 540.0
offset_right = 640.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("6_npapk")
theme_override_font_sizes/font_size = 16
text = "Level: 1"
horizontal_alignment = 1
vertical_alignment = 2

[node name="LevelUp" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
layout_mode = 0
offset_left = 800.0
offset_top = 50.0
offset_right = 1000.0
offset_bottom = 300.0

[node name="Label_LevelUp" type="Label" parent="GUILayer/GUI/LevelUp"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("6_npapk")
text = "Level up!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 190.0
offset_bottom = 100.0

[node name="SoundLevelUp" type="AudioStreamPlayer2D" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
stream = ExtResource("7_tm4c7")
volume_db = -10.0

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/IceSpearTimer" to="." method="_on_ice_spear_timer_timeout"]
[connection signal="timeout" from="Attack/IceSpearTimer/IceSpearAttackTimer" to="." method="_on_ice_spear_attack_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer" to="." method="_on_tornado_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer/TornadoAttackTimer" to="." method="_on_tornado_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]

[editable path="HurtBox"]
